Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Quality-assurance-protocol : Scripts and documentation for the PCP&#39;s protocol for assessing data quality." />
+    <meta name="description" content="PCP Quality Assurance Protocol : Scripts and documentation for the PCP&#39;s protocol for assessing data quality." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Quality-assurance-protocol</title>
+    <title>PCP Quality Assurance Protocol</title>
   </head>
 
   <body>
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/preprocessed-connectomes-project/quality-assurance-protocol">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/preprocessed-connectomes-project/quality-assessment-protocol">View on GitHub</a>
 
-          <h1 id="project_title">Quality-assurance-protocol</h1>
+          <h1 id="project_title">PCP Quality Assurance Protocol</h1>
           <h2 id="project_tagline">Scripts and documentation for the PCP&#39;s protocol for assessing data quality.</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/preprocessed-connectomes-project/quality-assurance-protocol/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/preprocessed-connectomes-project/quality-assurance-protocol/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/preprocessed-connectomes-project/quality-assessment-protocol/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/preprocessed-connectomes-project/quality-assessment-protocol/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -68,7 +68,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Quality-assurance-protocol maintained by <a href="https://github.com/preprocessed-connectomes-project">preprocessed-connectomes-project</a></p>
+        <p class="copyright">PCP Quality Assurance Protocol maintained by <a href="https://github.com/preprocessed-connectomes-project">preprocessed-connectomes-project</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
