Corrected typo; created page for publications

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ func_mask			= load_mask(func_mask_file)
 
 <ul>
   <li><strong>Contrast to Noise Ratio (CNR) [anat_cnr]:</strong> Calculated as the mean of the gray matter values minus the mean of the white matter values, divided by the standard deviation of the air values, higher values are better <sup id="fnref:1"><a href="#fn:1" class="footnote">1</a></sup>.</li>
-  <li><strong>Entopy Focus Criterion (EFC) [anat_efc]:</strong> Uses the Shannon entropy of voxel intensities as an indication of ghosting and blurring induced by head motion, lower is better <sup id="fnref:2"><a href="#fn:2" class="footnote">2</a></sup>.</li>
+  <li><strong>Entropy Focus Criterion (EFC) [anat_efc]:</strong> Uses the Shannon entropy of voxel intensities as an indication of ghosting and blurring induced by head motion, lower is better <sup id="fnref:2"><a href="#fn:2" class="footnote">2</a></sup>.</li>
   <li><strong>Foreground to Background Energy Ratio (FBER) [anat_fber]:</strong> Mean energy of image values (i.e., mean of squares) within the head relative to outside the head, higher values are better.</li>
   <li><strong>Smoothness of Voxels (FWHM) [anat_fwhm]:</strong> The full-width half maximum (FWHM) of the spatial distribution of the image intensity values in units of voxels, lower values are better <sup id="fnref:3"><a href="#fn:3" class="footnote">3</a></sup>.</li>
   <li><strong>Artifact Detection (Qi1) [anat_qi1]:</strong> The proportion of voxels with intensity corrupted by artifacts normalized by the number of voxels in the background, lower values are better <sup id="fnref:4"><a href="#fn:4" class="footnote">4</a></sup>.</li>
@@ -187,7 +187,7 @@ anat_snr 		= snr(mean_gm, std_bg)
 <p>The spatial functional measures will make use of the mean functional image and include EFC, FBER, and FWHM (code which has been described above) along with GSR (code which has been described below).</p>
 
 <ul>
-  <li><strong>Entopy Focus Criterion [func_efc]:</strong> SUses the Shannon entropy of voxel intensities as an indication of ghosting and blurring induced by head motion, lower is better <sup id="fnref:2:1"><a href="#fn:2" class="footnote">2</a></sup>. <em>Uses mean functional.</em></li>
+  <li><strong>Entropy Focus Criterion [func_efc]:</strong> SUses the Shannon entropy of voxel intensities as an indication of ghosting and blurring induced by head motion, lower is better <sup id="fnref:2:1"><a href="#fn:2" class="footnote">2</a></sup>. <em>Uses mean functional.</em></li>
   <li><strong>Foreground to Background Energy Ratio [func_fber]:</strong> Mean energy of image values (i.e., mean of squares) within the head relative to outside the head, higher values are better. <em>Uses mean functional.</em></li>
   <li><strong>Smoothness of Voxels [func_fwhm]:</strong> The full-width half maximum (FWHM) of the spatial distribution of the image intensity values in units of voxels, lower values are better. <em>Uses mean functional.</em></li>
   <li><strong>Ghost to Signal Ratio (GSR) [func_gsr]:</strong> A measure of the mean signal in the ‘ghost’ image (signal present outside the brain due to acquisition in the phase encoding direction) relative to mean signal within the brain, lower values are better. <em>Uses mean functional.</em></li>
