Install instructions typo

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h3 id="system-requirements">System Requirements</h3>
 
 <ul>
-  <li>Any *nix-based operating system capable of running QAP will work, so long as it can run <a href="http://afni.nimh.nih.gov">AFNI</a> and <a href="http://fsl.fmrib.ox.ac.uk">FSL</a>.</li>
+  <li>Any *nix-based operating system capable of running QAP will work, so long as it can run <a href="http://afni.nimh.nih.gov">AFNI</a>, and <a href="http://fsl.fmrib.ox.ac.uk">FSL</a>.</li>
   <li>The total amount of free hard disk space required is 5.7 GB.</li>
 </ul>
 
@@ -97,7 +97,7 @@ apt-get install -y fsl-5.0-complete afni
 <p>Once the pre-requisites have been satisfied, you can install the QAP package itself:</p>
 
 <pre><code>git clone https://github.com/preprocessed-connectomes-project/quality-assessment-protocol.git qap
-cd /qap
+cd qap
 python setup.py install
 </code></pre>
 
