Updated install instructions again.

--- a/index.html
+++ b/index.html
@@ -86,16 +86,9 @@ apt-get update
 apt-get install -y fsl-5.0-complete afni
 </code></pre>
 
-<h3 id="python-dependencies">Python Dependencies</h3>
+<h3 id="python-dependencies-and-qap">Python Dependencies and QAP</h3>
 
-<p>QAP requires Numpy, Scipy, Nipype, Nibabel, Nitime, PyYAML, and pandas.   If you have <code>pip</code>, you may install these by typing in the command below:</p>
-
-<pre><code>pip install numpy scipy &amp;&amp; pip install nipype nibabel nitime pyyaml pandas
-</code></pre>
-
-<h3 id="qap">QAP</h3>
-
-<p>Once the pre-requisites have been satisfied, you can install the QAP package itself:</p>
+<p>QAP requires Numpy, Scipy, Nipype, Nibabel, Nitime, PyYAML, and pandas to run.  If you have <code>pip</code>, you may install all of these and QAP itself by typing in the command below:</p>
 
 <pre><code>pip install qap
 </code></pre>
