Fix typos found by codespell

--- a/qap/viz/html/qap_functional_temporal.html
+++ b/qap/viz/html/qap_functional_temporal.html
@@ -42,7 +42,7 @@ This is a temporal motion quality assurance metric and tracks head motions over 
 it easy to determine whether or not the data potentially suffered from significant corruption
 due to motion. For instance, it is possible to detect if the participant's head was slowly sinking into the 
 cushions in the head coil, or whether the participant was possibly restless or agitated, which 
-would result in several postion changes or movement spikes. The framewise displacement is a 
+would result in several position changes or movement spikes. The framewise displacement is a 
 frame-by-frame representation of the differences between the BOLD signal intensity value of 
 the n and n+1 timepoints, the n+1 and n+2 timepoints, and so on. The report page for framewise 
 displacement in the functional scan includes both this frame-by-frame plot, as well as a 
